# pynteract

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
pynteract/: collector.py  magics.py  namespace_utils.py  shell.py  streams.py  utils.py
tests/: conftest.py  test_async.py  test_cwd.py  test_magics.py  test_namespace_utils.py  test_shell.py  test_utils.py
