[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynteract"
version = "0.1.1"
description = "Lightweight embedded, cell-oriented Python shell (notebooks/agents) with minimal dependencies."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "asttokens>=2.4",
]

[project.optional-dependencies]
terminal = ["prompt-toolkit>=3.0"]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
pynteract = "pynteract.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["pynteract*"]
exclude = ["tests*"]
